[project]
name = "gamemaker-server"
version = "0.1.0"
description = "Multi-threaded TCP game server for GameMaker:Studio"
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "black",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gamemaker_server"]

[tool.black]
line-length = 88
target-version = ["py38"]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pytest>=8.0.0",
]
